Unit tests, improved logging, returned errors
