# internal/handler/v1/get_songs.go
@@ -5,15 +5,16 @@ import (
 	"fmt"
 	"log/slog"
 	"net/http"
+	"net/url"
+	"strconv"
 	"strings"
 
 	"github.com/amicie-monami/music-library/internal/domain/dto"
 	"github.com/amicie-monami/music-library/pkg/httpkit"
-	"github.com/pawpawchat/core/pkg/response"
 )
 
 type songDataGetter interface {
-	GetSongs(ctx context.Context, aggregation map[string]any) ([]dto.SongWithDetails, error)
+	GetSongs(ctx context.Context, aggregation map[string]any) ([]*dto.SongWithDetails, error)
 }
 
 // @Summary Получение данных библиотеки
@@ -33,28 +34,26 @@ type songDataGetter interface {
 // @Param (filter)release_date query string false "Параметр описывает фильтр для даты релиза песни. Поддерживает прямое равенство, операторы сравнения (см. (filter)song_id) и установку границ с помощью знака ”-”. Пример: filter=release_date=01.01.2023-05.05.2024 (start_date-end_date)."
 // @Param (filter)link query string false "Параметр описывает фильтр для ссылки на песню. Поддерживает оператор * регулярных выражений, нечувствителен к регистру, множественные значения передаются чреез знак ”+”. Пример: filter=link=\*yandex\*+\*spotify\*."
 // @Param (filter)text query string false "Параметр описывает фильтр для текста песни. Поддерживает оператор * регулярных выражений, нечувствителен к регистру, множественные значения передаются чреез знак ”+”. Пример: filter=text=\*батюшка\*+\*ленин\*."
-// @Success 200 {array} []dto.SongWithDetails "Список песен, прошедших аггрегацию данных."
+// @Success 200 {array} dto.GetSongsResponse "Список песен, прошедших аггрегацию данных."
 // @Failure 400 {object} dto.Error "Неверный запрос, некорректные значения параметров."
 // @Failure 500 {object} dto.Error "Внутреняя ошибка сервера."
-func GetSongsData(repo songDataGetter) http.Handler {
+func GetSongs(repo songDataGetter) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		params, err := parseGetSongsDataQueryParams(r)
 		if err != nil {
-			slog.Info(err.Error())
-			response.Json().BadRequest().Body(body{"error": err.Error()}).MustWrite(w)
+			sendError(w, err)
 			return
 		}
 
-		songsWithDetails, err := repo.GetSongs(r.Context(), params)
+		songs, err := repo.GetSongs(r.Context(), params)
 		if err != nil {
-			slog.Info(err.Error())
-			// needs refactoring: to get rid of the "magic" error
-			response.Json().InternalError().Body(dto.Error{Message: "Internal server error"})
+			sendError(w, err)
 			return
 		}
 
-		response.Json().OK().Body(body{"songs": songsWithDetails}).MustWrite(w)
-		slog.Info("200")
+		slog.Info("songs have been successfully filtered", "count", len(songs))
+		responseBody := dto.GetSongsResponse{Songs: songs}
+		httpkit.Ok(w, responseBody)
 	})
 }
 
@@ -64,7 +63,12 @@ func parseGetSongsDataQueryParams(r *http.Request) (map[string]any, error) {
 		return nil, err
 	}
 
-	limit, offset, err := parsePaginationParams(r)
+	limit, err := parseLimitParam(r)
+	if err != nil {
+		return nil, err
+	}
+
+	offset, err := parseOffsetParam(r)
 	if err != nil {
 		return nil, err
 	}
@@ -88,6 +92,11 @@ func parseGetSongsFieldsParam(r *http.Request) (string, error) {
 		return "", nil
 	}
 
+	decodedFieldsParam, err := url.QueryUnescape(fieldsParam)
+	if err != nil {
+		return "", dto.NewError(400, "failed to decode url", "parseGetSongsFieldsParam", nil, nil)
+	}
+
 	availableValues := map[string]string{
 		"song_id":      "song_id",
 		"group":        "group_name",
@@ -97,10 +106,12 @@ func parseGetSongsFieldsParam(r *http.Request) (string, error) {
 		"text":         "text",
 	}
 
+	fieldsParam = strings.ReplaceAll(decodedFieldsParam, "+", " ")
 	fields := strings.Split(strings.TrimSpace(fieldsParam), " ")
+
 	for idx := range fields {
 		if _, ok := availableValues[fields[idx]]; !ok {
-			return "", fmt.Errorf("invalid value in fields param: %s", fields[idx])
+			return "", dto.NewError(400, "unknown parameter", "parseGetSongsFieldsParam", fields[idx], nil)
 		}
 		//replace query field names with the database column names
 		fieldsParam = strings.ReplaceAll(fieldsParam, fields[idx], availableValues[fields[idx]])
@@ -115,6 +126,11 @@ func parseGetSongsDataFilterParams(r *http.Request) (map[string]any, error) {
 		return nil, nil
 	}
 
+	decodedFilter, err := url.QueryUnescape(filter)
+	if err != nil {
+		return nil, dto.NewError(400, "failed to decode url", "parseGetSongsFieldsParam", nil, nil)
+	}
+
 	availableValues := map[string]struct{}{
 		"song_id":      {},
 		"song_name":    {},
@@ -124,9 +140,9 @@ func parseGetSongsDataFilterParams(r *http.Request) (map[string]any, error) {
 		"text":         {},
 	}
 
-	filterMap := make(map[string]any)
-	params := strings.Split(filter, ",")
+	params := strings.Split(strings.ReplaceAll(decodedFilter, "+", " "), ",")
 
+	filterMap := make(map[string]any)
 	for idx := range params {
 		param := strings.Split(params[idx], "=")
 
@@ -134,16 +150,84 @@ func parseGetSongsDataFilterParams(r *http.Request) (map[string]any, error) {
 			// add validate for song_id parameter
 		}
 
-		if len(param) != 2 {
-			return nil, fmt.Errorf("invalid param %s", params[idx])
+		if len(param) != 2 || param[1] == "" {
+			return nil, dto.NewError(400, "missing value for filter", "parseGetSongsDataFilterParams", params[idx], nil)
 		}
 
 		if _, ok := availableValues[param[0]]; !ok {
-			return nil, fmt.Errorf("invalid value in filter param: %s", params[idx])
+			return nil, dto.NewError(400, "invalid filter key", "parseGetSongsDataFilterParams", param[0], nil)
 		}
 
 		filterMap[param[0]] = param[1]
 	}
 
 	return filterMap, nil
+}
+
+func parseOffsetParam(r *http.Request) (int64, error) {
+	offsetParam := r.URL.Query().Get("offset")
+	if offsetParam == "" {
+		return 0, nil
+	}
+
+	//check if the offset param is valid
+	offset, err := checkOffsetParamValue(offsetParam)
+	if err != nil {
+		return 0, err
+	}
+
+	return offset, nil
+}
+
+func checkOffsetParamValue(offsetParam string) (int64, error) {
+	offset, err := strconv.ParseInt(offsetParam, 10, 64)
+	if err != nil {
+		details := fmt.Sprintf("offset=%s", offsetParam)
+		return 0, dto.NewError(400, "offset param must be a num", "parseOffsetParam", details, nil)
+	}
+
+	if offset < 0 {
+		details := fmt.Sprintf("offset=%d, but param must be >= 0", offset)
+		return 0, dto.NewError(400, "invalid offset param", "checkOffsetParamValue", details, nil)
+	}
+
+	return offset, nil
+}
+
+func parseLimitParam(r *http.Request) (int64, error) {
+	limitParam := r.URL.Query().Get("limit")
+	if limitParam == "" {
+		return 10, nil
+	}
+
+	//check if the limit param is valid
+	limit, err := checkLimitParamValue(limitParam)
+	if err != nil {
+		return 0, err
+	}
+
+	return limit, nil
+}
+
+func checkLimitParamValue(limitParam string) (int64, error) {
+	//parse limit param
+	limit, err := strconv.ParseInt(limitParam, 10, 64)
+	if err != nil {
+		details := fmt.Sprintf("limit=%s, but it must be >= 0", limitParam)
+		return 0, dto.NewError(400, "invalid limit param", "checkLimitParamValue", details, nil)
+	}
+	// if limit == 0 {
+	// 	return 10, nil
+	// }
+
+	if limit > 1000 {
+		return 1000, nil
+	}
+
+	if limit < 1 {
+		details := fmt.Sprintf("limit=%d, but must be >= 1", limit)
+		return 0, dto.NewError(400, "invalid limit param", "checkLimitParamValue", details, nil)
+	}
+
+	return limit, nil
 }
